# biked-commons

./: .gitignore  MANIFEST.in  README.md  pip_freeze.sh  pyproject.toml  raw-requirements.txt  requirements.txt
.github/: dependabot.yaml
.github/workflows/: build.yaml
BikeCAD-server/: .gitignore  README.md  pom.xml  test.sh
BikeCAD-server/BikeJar/: build.sh  pom.xml
src/biked_commons/: exceptions.py  resource_utils.py
src/biked_commons/api/: prediction.py  rendering.py  scoring.py  validations.py  xml_utils.py
src/biked_commons/bike_embedding/: clip_embedding_calculator.py  embedding_predictor.py  ordered_columns.py
src/biked_commons/cad_services/: cad_builder.py
src/biked_commons/combined_representation/: combined_bike_representations.py  combined_representation.py  conversions.py  load_data.py  merging.py
src/biked_commons/datasets/: aerodynamics.csv
src/biked_commons/design_evaluation/: design_evaluation.py  testing.ipynb
src/biked_commons/ergonomics/: joint_angles.py
src/biked_commons/prediction/: aero_predictor.py  clip_predictor.py  evaluators.py  loaders.py  prediction_utils.py  prepare.py  testing.ipynb  train_aero.ipynb  train_clip.ipynb  train_validity.ipynb  usability_predictors.py  validity_predictor.py
src/biked_commons/rendering/: BikeCAD_server_client.py  BikeCAD_server_manager.py  bikeCad_renderer.py  biked_renderer.py  (+1 more)
test/: test_clip_embedding_gen_script.py  test_combined_bike_representations.py  test_combined_representation.py  test_conversions.py  test_e2e.py  test_multithreaded_server_manager.py  test_rendering.py  test_usability.py  test_validations.py  test_xml_handler.py  utils_for_tests.py
test/resources/: sample_objects.json  test.xml
test/test_internals/: test_algebraic_parser.py  test_embedding_comparator.py  test_embedding_predictor.py  test_xml_handler.py
(+66 files in other folders)
