# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biked-commons"
version = "0.0.1b0"
description = "Biked-Commons is a utility package which is useful for various BIKED-related projects, including MCD-Demo, BIKED-Integration, and others."
readme = "README.md"
authors = [{ name = "Lyle Regenwetter & Yazan Abu Obaideh" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["counterfactuals", "design", "multi-objective", "multiobjective", "machine-learning"]
dependencies = [
    "beautifulsoup4",
    "lxml"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/yazan-abu-obaideh/biked-commons"
