[project]
name = "biked-commons"
version = "0.0.1"
description = "Biked Commons is a package that offers various functions that are useful for working within the BIKED ecosystem."
authors = [
    {name = "Lyle Regenwetter & Yazan Abu Obaideh"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "lxml (>=5.3.2,<6.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "attrs (>=25.3.0,<26.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "transformers (>=4.51.1,<5.0.0)",
    "dill (>=0.3.9,<0.4.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "torchvision (>=0.21.0,<0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

